// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NuGetApiToken renders correctly: baseline 1`] = `
<div>
  <main
    class="nx-page-main"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-key fa-w-16 nx-page-title__page-icon nx-icon"
            data-icon="key"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 176.001C512 273.203 433.202 352 336 352c-11.22 0-22.19-1.062-32.827-3.069l-24.012 27.014A23.999 23.999 0 0 1 261.223 384H224v40c0 13.255-10.745 24-24 24h-40v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-78.059c0-6.365 2.529-12.47 7.029-16.971l161.802-161.802C163.108 213.814 160 195.271 160 176 160 78.798 238.797.001 335.999 0 433.488-.001 512 78.511 512 176.001zM336 128c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48z"
              fill="currentColor"
            />
          </svg>
          <span>
            NuGet API Key
          </span>
        </h1>
        <p
          class="nx-page-title__description nx-feature-description"
        >
          Configure credentials for NuGet repositories
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile"
      >
        <div
          class="nx-tile-content"
        >
          <p>
             
            A new API Key will be created the first time it is accessed. Resetting your API Key will invalidate the current key.
             
          </p>
          <div
            class="nx-footer"
          >
            <button
              class="nx-btn nx-btn--primary"
            >
              <span>
                Access API Key
              </span>
            </button>
            <button
              class="nx-btn nx-btn--secondary"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-lock fa-w-14 nx-icon"
                data-icon="lock"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Reset API Key
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`NuGetApiToken renders correctly: nugetKeyPresent 1`] = `
<div>
  <main
    class="nx-page-main"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-key fa-w-16 nx-page-title__page-icon nx-icon"
            data-icon="key"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 176.001C512 273.203 433.202 352 336 352c-11.22 0-22.19-1.062-32.827-3.069l-24.012 27.014A23.999 23.999 0 0 1 261.223 384H224v40c0 13.255-10.745 24-24 24h-40v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-78.059c0-6.365 2.529-12.47 7.029-16.971l161.802-161.802C163.108 213.814 160 195.271 160 176 160 78.798 238.797.001 335.999 0 433.488-.001 512 78.511 512 176.001zM336 128c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48z"
              fill="currentColor"
            />
          </svg>
          <span>
            NuGet API Key
          </span>
        </h1>
        <p
          class="nx-page-title__description nx-feature-description"
        >
          Configure credentials for NuGet repositories
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile"
      >
        <div
          class="nx-tile-content"
        >
          <p>
             
            A new API Key will be created the first time it is accessed. Resetting your API Key will invalidate the current key.
             
          </p>
          <div
            class="nx-footer"
          >
            <button
              class="nx-btn nx-btn--primary"
            >
              <span>
                Access API Key
              </span>
            </button>
            <button
              class="nx-btn nx-btn--secondary"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-lock fa-w-14 nx-icon"
                data-icon="lock"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Reset API Key
              </span>
            </button>
          </div>
          <dialog
            aria-modal="true"
            class="nx-modal-backdrop"
            role="dialog"
          >
            <div
              class="nx-modal nx-modal--wide"
              id="nuget-api-key-modal"
            >
              <header
                class="nx-modal-header"
              >
                <h2
                  class="nx-h2"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-key fa-w-16 fa-fw nx-icon"
                    data-icon="key"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M512 176.001C512 273.203 433.202 352 336 352c-11.22 0-22.19-1.062-32.827-3.069l-24.012 27.014A23.999 23.999 0 0 1 261.223 384H224v40c0 13.255-10.745 24-24 24h-40v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-78.059c0-6.365 2.529-12.47 7.029-16.971l161.802-161.802C163.108 213.814 160 195.271 160 176 160 78.798 238.797.001 335.999 0 433.488-.001 512 78.511 512 176.001zM336 128c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                     
                    NuGet API Key
                     
                  </span>
                </h2>
              </header>
              <div
                class="nx-modal-content"
              >
                <p>
                  <span>
                     
                    Your NuGet API Key enables pushing packages using nuget.exe.
                     
                    <strong>
                       
                      Keep this key secret!
                       
                    </strong>
                     
                  </span>
                   
                  <br />
                </p>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="nuget-api-key"
                  >
                    <span
                      class="nx-label__text"
                    >
                      Your NuGet API Key is:
                    </span>
                  </label>
                  <textarea
                    class="nxrm-code"
                    id="nuget-api-key"
                    readonly=""
                  >
                    testApiKey
                  </textarea>
                </div>
                <div
                  class="nx-form-group"
                >
                  <label
                    class="nx-label"
                    for="nuget-example-command"
                  >
                    <span
                      class="nx-label__text"
                    >
                      You can register this key for a given repository with the following command:
                    </span>
                  </label>
                  <textarea
                    class="nxrm-code"
                    id="nuget-example-command"
                    readonly=""
                  >
                    nuget setapikey testApiKey -source http://localhost:4242/repository/fakeUrl
                  </textarea>
                </div>
                <p>
                  <span>
                     
                    This window will automatically close after one minute.
                  </span>
                   
                  <br />
                </p>
              </div>
              <footer
                class="nx-footer"
              >
                <button
                  class="nx-btn nx-btn--secondary"
                >
                  Close
                </button>
              </footer>
            </div>
          </dialog>
        </div>
      </div>
    </div>
  </main>
</div>
`;
